fixed forgot password button to align right

--- a/161_TablesAndForms/loginForm_styles.css
+++ b/161_TablesAndForms/loginForm_styles.css
@@ -49,10 +49,13 @@ h1 {
     color: #333333;
 }
 
+.forgot {
+    text-align: right;
+}
+
 #forgot-password {
     background-color: white;
     border: 0px;
-    padding-left: 279px;
     font-weight: 200;
 }
 
